<resources>
    <string name="app_name">Fund Me</string>
    <string name="kickstarter">Fund Me</string>
    <string name="we_fund">Get the attention you deserve</string>
    <string name="enter_you_email">Enter your email</string>
    <string name="enter_you_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="signup">Signup</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="lorem">I have learned that long-term goals are best achieved when I break them into shorter goals. My short-term goal is to find a position that will put me in a forward-moving company with solid performance and future projections. As part of a team, I want to add value and continue to grow the company.</string>
    <string name="back_project">Back project</string>
    <string name="project">Project</string>
    <string name="categoryTitle">Category</string>
    <string name="author">Author</string>
    <string name="date">Date</string>
    <string name="details">Details</string>
    <string name="funds_and_target">Funds and targets</string>
    <string name="start_project">Start Project</string>
    <string name="heroimage">heroImage</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="backed_projects">Backed projects</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="fund_target_in_pkr">Fund target in PKR</string>
    <string name="start_a_project">Start a project !</string>
    <string name="video_optional">Video</string>
    <string name="submit">Submit</string>
    <string name="logging_in">Logging In</string>
    <string name="please_wait">Please wait.</string>
    <string name="login_error">Login Error</string>
    <string name="signin_up">Signing Up</string>
    <string name="welcome_to_kickstarter_nwe_fund">Welcome to Fund Me  \n\nGet the attention you deserve.</string>
    <string name="an_error_occured_please_try_again_later">An error occured please try again later.</string>
    <string name="logout">Logout</string>
    <string name="logout_content">Are you sure you want to logout ?</string>
    <string name="choose_image">Choose image</string>
    <string name="edit">Edit Profile</string>
    <string name="password">password</string>
    <string name="biography">biography</string>
    <string name="choose_profile_image">Choose Profile Image</string>
    <string name="submitting">Submitting Form</string>
    <string name="dash">------</string>
    <string name="rate_project">Rate project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment">Payment</string>
    <string name="comment">Comment</string>
    <string name="amount_pkr">Amount: PKR</string>
    <string name="bank_information">Bank information</string>
    <string name="bank_acc_no_2">Bank Account Number</string>
    <string name="easypaisa_information">EasyPaisa information</string>
    <string name="phone_number">Phone Number</string>
    <string name="_0345_5464646">0345 5464646</string>
    <string name="rate_projects">Rate Project</string>
    <string name="project_heading">Project :</string>
    <string name="add_bank_info">Add bank info</string>
    <string name="bank_branch">Bank Branch</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="add_easy_paisa_info">Add Easy paisa info</string>
    <string name="cnic">CNIC</string>
    <string name="easy_paisa_phone_number">Easy Paisa phone number</string>
</resources>
