<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="12dp">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/profileImageView"
        android:layout_centerHorizontal="true"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/gradient"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="8dp"/>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_below="@id/profileImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/name"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:text="Ahmed Khattak"
            android:id="@+id/profileNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>


        <TextView
            android:text="@string/email"
            android:layout_marginBottom="4dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/profileEmailTextView"
            android:layout_marginBottom="8dp"
            android:text="khattak.ahmed@yahoo.com"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="4dp"
            android:text="@string/backed_projects"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/profileBackedProjectsTextView"
            android:layout_marginBottom="8dp"
            android:text="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_marginBottom="4dp"
            android:text="@string/description"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/profileDescriptionTextView"
            android:text="@string/lorem"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </android.support.v7.widget.LinearLayoutCompat>

</RelativeLayout>