<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmedkhattak.kickstarter.Activities.EditProfileActivity">



    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/materialize_toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/toolbar"/>

    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_below="@+id/appBarLayout"
        android:id="@+id/scollViewContainer"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="16dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/name"
            app:errorEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/nameInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/email"
            app:errorEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/emailInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/location"
            app:errorEnabled="true"
            android:id="@+id/locationTextInputLayout">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/locationInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/company"
            android:id="@+id/companyTextInputLayout"
            app:errorEnabled="true">
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/companyInputEditText"/>
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/password"
            app:errorEnabled="true"
            android:id="@+id/passwordTextInputLayout"
            >
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/passwordInputEditText"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:hint="@string/biography"
            app:errorEnabled="true"
            android:id="@+id/biographyInputLayout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/biographyInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <TextView
            android:text="@string/choose_profile_image"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">



            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profileImage"
                android:scaleType="centerInside"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/gradient"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/profileImageSelectActionButton"
                android:layout_marginStart="16dp"
                app:backgroundTint="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/choose_image"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"/>

        </LinearLayout>







        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submitActionButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"
            android:textSize="18sp"
            android:text="@string/submit"/>


    </android.support.v7.widget.LinearLayoutCompat>





    </ScrollView>







</RelativeLayout>
