<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ahmedkhattak.kickstarter.Activities.SignupActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/gradient">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="50dp">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_horizontal"
                android:text="@string/kickstarter"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:text="@string/we_fund" />


        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="34dp"
            android:orientation="vertical">

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0dp"
                android:layout_height="0dp"/>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/nameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColorHint="@color/white"
                android:hint="@string/enter_your_name">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/nameInputEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/emailTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColorHint="@color/white"
                android:hint="@string/enter_you_email">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/emailInputEditTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    app:backgroundTint="@color/white"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/passwordTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:textColorHint="@color/white"
                android:hint="@string/enter_you_password">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/passwordInputEditTextView"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:backgroundTint="@color/white"/>

            </android.support.design.widget.TextInputLayout>


        </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/signUpActionButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorAccent"/>


        <TextView
            android:id="@+id/loginActionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:text="@string/already_have_an_account" />


    </android.support.v7.widget.LinearLayoutCompat>


</ScrollView>
